--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/nguyenxuananh0910/test1#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "msnodesqlv8": "^2.4.0",
+    "mssql": "^7.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
